# ICL-PILOT

./: .gitignore  COLAB_INSTRUCTIONS.md  ENNI-B1_df.csv  ENNI_B1_SYN_0_freq.csv  Kruskal-Wallis.py  README.md  UD_kideval_NOSD.csv  Untitled.Rmd  add_gram_tag.py  analyze_enni_b1.py  analyze_enni_b1_direct.py  clinical_analyses.Rmd  condition_a_zeroshot_results.csv  convert_frog_csv_to_jsonl.py  data_normalisation.py  dld_data_extractor.py  dld_stories_cleaned.csv  enni_b1_colab_analysis.ipynb  enni_b1_colab_analysis_backup.ipynb  extract_chi_text.py  extract_error_frequencies.py  extract_simple_error_frequencies.py  kideval_ENNI-B1.csv  normalized_kideval_data.csv  p_text_SLI.jsonl  p_text_TD.jsonl  pca.py  pyproject.toml  requirements.txt  run_batchalign_analysis.sh  setup_batchalign_env.sh  synthetic_B1_freq.csv
ENNI_B1_DLD/: 413.cha  427.cha  444.cha  479.cha  480.cha  527.cha  529.cha  531.cha  535.cha  567.cha  568.cha  569.cha  570.cha  572.cha  574.cha  576.cha
ENNI_B1_SYN/: condition_a_zeroshot_001_B1.cha  condition_a_zeroshot_002_B1.cha  condition_a_zeroshot_003_B1.cha  condition_a_zeroshot_004_B1.cha  condition_a_zeroshot_005_B1.cha  condition_a_zeroshot_006_B1.cha  condition_a_zeroshot_007_B1.cha  condition_a_zeroshot_008_B1.cha  condition_a_zeroshot_009_B1.cha  condition_a_zeroshot_010_B1.cha  condition_a_zeroshot_011_B1.cha  condition_a_zeroshot_012_B1.cha  condition_a_zeroshot_013_B1.cha  condition_a_zeroshot_014_B1.cha  condition_a_zeroshot_015_B1.cha  condition_a_zeroshot_016_B1.cha  condition_a_zeroshot_017_B1.cha  condition_a_zeroshot_018_B1.cha  (+162 more)
(+5143 files in other folders)
