[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icl-pilot"
version = "0.1.0"
description = "Scaffold for the sample-wise multi-step DLD augmentation pipeline."
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
